con api hecha repasar cositas

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -17,9 +17,10 @@
             <p>|</p>
             <li><a href="#" class="text-black">Ayuda</a></li>
             <p>|</p>
-            <li><a href="#" class="text-black">Únete a Nosotros</a></li>
+            <li><a routerLink="/register" class="text-black">Registrarse</a></li>
             <p>|</p>
-            <li><a href="#" class="text-black">Iniciar Sesión</a></li>
+            <li><a routerLink="/login" class="text-black">Iniciar Sesión</a></li>
+            <p>|</p>
         </ul>
     </div>
 </nav>
@@ -33,7 +34,7 @@
     <!-- Enlaces -->
     <div class="flex-grow flex justify-center space-x-6">
         <div>
-            <a routerLink="/home" class="text-black font-semibold">HOME</a>
+            <a routerLink="/" class="text-black font-semibold">HOME</a>
         </div>
         <div>
             <a routerLink="/productos" class="text-black font-semibold">PRODUCTOS</a>
